--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,14 +3,15 @@ FROM node:lts-slim
 WORKDIR /app
 
 COPY app/package*.json ./
-
+COPY app/craco.config.js ./
 RUN npm install
 
-COPY . ./
+COPY app/public ./public
+COPY app ./
 
-WORKDIR app/frontend/app
+WORKDIR /app/frontend/app
 RUN npm run build
 
 WORKDIR /app
 
-CMD ["npm", "start"]
+CMD ["sh", "-c", "npm start"]
