--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,16 @@ services:
     command: python3 /backend/manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
+    env_file:
+      - ./backend/.env
     tty: true
 
   db:
     image: postgres:latest
     ports:
       - 5432:5432
+    env_file:
+      - ./db/.env
     environment:
       - POSTGRES_DB=qiita_django
       - POSTGRES_USER=root
@@ -29,9 +33,11 @@ services:
     command:
       - "sh"
       - "-c"
-      - "npm install && npm start"
+      - "npm install && npm start --port 80"
     ports:
-      - 3000:3000
+      - 80:80
+    env_file:
+      - ./frontend/.env
     tty: true
     stdin_open: true
     environment:
