インフラようにBasic認証を追加

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,7 @@
+#ポート情報
 PORT=80
+
+#Basic認証
+REACT_APP_BASIC_AUTH=false #trueにするとBasic認証がONになる
+REACT_APP_BASIC_AUTH_USER=qiita_django #Basic認証時のユーザID
+REACT_APP_BASIC_AUTH_PASSWORD=Yr4@9uLbW!qX #Basic認証時のパスワード
