--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -17,6 +17,8 @@
     "react-scripts": "5.0.1",
     "react-router-dom": "^6.23.0",
     "react-bootstrap": "^2.10.2",
+    "react-markdown-editor-lite": "^1.3.2",
+    "react-markdown": "^8.0.7",
     "bootstrap": "^5.3.3",
     "start": "^5.1.0",
     "typescript": "^4.9.5",
